--- a/.shed.yml
+++ b/.shed.yml
@@ -1,5 +1,4 @@
-categories: []
+categories: [Genome-Wide Association Study]
 description: Plink2 Genomics Toolkit
 name: planemo
 owner: planemo
-category: Genetics
